Added genotype, and genotype to fenotype conversion