@@ -21,6 +21,8 @@
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 
+
+
 	<dependencies>
 		<!-- Flink Core -->
 		<dependency>
@@ -47,9 +49,8 @@
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-clients</artifactId>
-			<version>1.20.0</version>
+			<version>${flink.version}</version> <!-- Allineato con flink.version -->
 		</dependency>
-
 
 		<!-- Flink File Connector -->
 		<dependency>
@@ -57,6 +58,13 @@
 			<artifactId>flink-connector-files</artifactId>
 			<version>${flink.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.esotericsoftware</groupId>
+			<artifactId>kryo</artifactId>
+			<version>5.6.0</version>
+		</dependency>
+
 
 		<!-- Log4j for logging -->
 		<dependency>
@@ -86,6 +94,16 @@
 					<target>${java.version}</target>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+				</configuration>
+			</plugin>
+
 
 			<!-- Maven Shade Plugin per creare un jar contenente tutte le dipendenze -->
 			<plugin>
@@ -122,6 +140,16 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+
+			<!-- Maven Surefire Plugin per passare le opzioni JVM -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
